; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_parse-events.c_parse_events__term_str.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_parse-events.c_parse_events__term_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parse_events__term = type { i32 }

@PARSE_EVENTS__TERM_TYPE_STR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_events__term_str(%struct.parse_events__term** %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.parse_events__term**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.parse_events__term** %0, %struct.parse_events__term*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.parse_events__term**, %struct.parse_events__term*** %5, align 8
  %10 = load i32, i32* @PARSE_EVENTS__TERM_TYPE_STR, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i32 @new_term(%struct.parse_events__term** %9, i32 %10, i32 %11, i8* %12, i8* %13, i32 0)
  ret i32 %14
}

declare dso_local i32 @new_term(%struct.parse_events__term**, i32, i32, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
